--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
+    "react-debounce-input": "^3.2.2",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
